{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 26,
  "lineage": "8153a050-d4f3-1267-d0cb-c2501b9ca075",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03490603c2c518f01",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:elastic-ip/eipalloc-03490603c2c518f01",
            "association_id": "eipassoc-065ec6ac6d9395c22",
            "domain": "vpc",
            "id": "eipalloc-03490603c2c518f01",
            "instance": "i-0aaba77ef5fef10f6",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0224da7e452ab2188",
            "private_dns": "ip-10-0-1-118.ap-south-1.compute.internal",
            "private_ip": "10.0.1.118",
            "public_dns": "ec2-52-66-154-67.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.154.67",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "upi-eip-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "upi-eip-dev",
              "Project": "UPI-Transfer-Service"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f063d5ad06e39de7",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:elastic-ip/eipalloc-0f063d5ad06e39de7",
            "association_id": "eipassoc-01c2e68d3b4e2bfa4",
            "domain": "vpc",
            "id": "eipalloc-0f063d5ad06e39de7",
            "instance": "i-018b2a45b353bd771",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-06722ec0f1608f9e1",
            "private_dns": "ip-10-0-1-126.ap-south-1.compute.internal",
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-201-236-66.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.236.66",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "upi-eip-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "upi-eip-prod",
              "Project": "UPI-Transfer-Service"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "test",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0052d69560cecd36c",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:elastic-ip/eipalloc-0052d69560cecd36c",
            "association_id": "eipassoc-0d0c5bb26ffceebdf",
            "domain": "vpc",
            "id": "eipalloc-0052d69560cecd36c",
            "instance": "i-0221db8f60ef5f053",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-09e7f76b31e6965fa",
            "private_dns": "ip-10-0-1-72.ap-south-1.compute.internal",
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-13-203-187-124.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.203.187.124",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "test",
              "Name": "upi-eip-test"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "upi-eip-test",
              "Project": "UPI-Transfer-Service"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.app",
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "dev",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d05f76acbed4e3e",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:instance/i-0aaba77ef5fef10f6",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aaba77ef5fef10f6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upi-transfer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0224da7e452ab2188",
            "private_dns": "ip-10-0-1-118.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.118",
            "public_dns": "ec2-65-0-182-44.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.182.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "UPI-Transfer-Service"
                },
                "throughput": 125,
                "volume_id": "vol-0564172a9b7556531",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53db510378b59ff",
            "tags": {
              "Environment": "dev",
              "Name": "upi-transfer-dev"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "upi-transfer-dev",
              "Project": "UPI-Transfer-Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095611bdf33632847"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "prod",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d05f76acbed4e3e",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:instance/i-018b2a45b353bd771",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-018b2a45b353bd771",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upi-transfer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06722ec0f1608f9e1",
            "private_dns": "ip-10-0-1-126.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.126",
            "public_dns": "ec2-13-201-95-52.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.95.52",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "UPI-Transfer-Service"
                },
                "throughput": 125,
                "volume_id": "vol-0e22c3bcd0222f7be",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53db510378b59ff",
            "tags": {
              "Environment": "prod",
              "Name": "upi-transfer-prod"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "upi-transfer-prod",
              "Project": "UPI-Transfer-Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095611bdf33632847"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "test",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02d05f76acbed4e3e",
            "arn": "arn:aws:ec2:ap-south-1:902190101181:instance/i-0221db8f60ef5f053",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0221db8f60ef5f053",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "upi-transfer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09e7f76b31e6965fa",
            "private_dns": "ip-10-0-1-72.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.72",
            "public_dns": "ec2-52-66-79-37.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.79.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags_all": {
                  "ManagedBy": "Terraform",
                  "Project": "UPI-Transfer-Service"
                },
                "throughput": 125,
                "volume_id": "vol-08312ce601052f1a5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f53db510378b59ff",
            "tags": {
              "Environment": "test",
              "Name": "upi-transfer-test"
            },
            "tags_all": {
              "Environment": "test",
              "ManagedBy": "Terraform",
              "Name": "upi-transfer-test",
              "Project": "UPI-Transfer-Service"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-095611bdf33632847"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:902190101181:internet-gateway/igw-0e9d266fc11b948ce",
            "id": "igw-0e9d266fc11b948ce",
            "owner_id": "902190101181",
            "tags": {
              "Name": "upi-igw"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "upi-igw",
              "Project": "UPI-Transfer-Service"
            },
            "vpc_id": "vpc-0a823657fd792e9de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:902190101181:route-table/rtb-07bb1db1a3753b02c",
            "id": "rtb-07bb1db1a3753b02c",
            "owner_id": "902190101181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e9d266fc11b948ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "upi-rt"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "upi-rt",
              "Project": "UPI-Transfer-Service"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a823657fd792e9de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05acd1b376cfec91c",
            "route_table_id": "rtb-07bb1db1a3753b02c",
            "subnet_id": "subnet-0f53db510378b59ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:902190101181:security-group/sg-095611bdf33632847",
            "description": "Security group for UPI Transfer Service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095611bdf33632847",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Application",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "upi-sg",
            "name_prefix": "",
            "owner_id": "902190101181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "upi-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "upi-sg",
              "Project": "UPI-Transfer-Service"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a823657fd792e9de"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:902190101181:subnet/subnet-0f53db510378b59ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f53db510378b59ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "902190101181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "upi-subnet"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "upi-subnet",
              "Project": "UPI-Transfer-Service"
            },
            "vpc_id": "vpc-0a823657fd792e9de"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:902190101181:vpc/vpc-0a823657fd792e9de",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b1ccbbeccf7f3b89",
            "default_route_table_id": "rtb-093209286fc538ecc",
            "default_security_group_id": "sg-04fdff89cd6741b67",
            "dhcp_options_id": "dopt-028e0ff1d5dd13757",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a823657fd792e9de",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093209286fc538ecc",
            "owner_id": "902190101181",
            "tags": {
              "Name": "upi-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "upi-vpc",
              "Project": "UPI-Transfer-Service"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}